--- a/lesson1.html
+++ b/lesson1.html
@@ -1,9 +1,23 @@
 <!DOCTYPE HTML>
-<html>
+<html >
+<head>
+
+	<!-- Website Title & Description for Search Engine purposes -->
+	<!--    <title></title>-->
+	<meta name="description" content="">
+	<meta charset="utf-8">
+
+	<!-- Mobile viewport optimized -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+
+	<link href="lesson1.css" rel="stylesheet">
+
+</head>
 	<body>
 		
 		
-		<p>hello</p>
+		<p>hello Mike</p>
 		
 		
 	<script src="lesson1.js"></script>	
