--- a/lesson1.html
+++ b/lesson1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html >
+<html lang="ru">
 <head>
-
+<title>sjkdvhb</title>
 	<!-- Website Title & Description for Search Engine purposes -->
 	<!--    <title></title>-->
 	<meta name="description" content="">
