--- a/lesson2.html
+++ b/lesson2.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Antagonist</title>
-    <title>Antagonist1</title>
+    <title>Antagonistff</title>
+<!--    <title>Antagonist1</title>-->
 </head>
 <body>
 
