учебник java script стрелочные функции

--- a/lesson1.html
+++ b/lesson1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ru">
 <head>
-<title>sjkdvhb</title>
+<title>lessons</title>
 	<!-- Website Title & Description for Search Engine purposes -->
 	<!--    <title></title>-->
 	<meta name="description" content="">
@@ -17,7 +17,7 @@
 	<body>
 		
 		
-		<p>111</p>
+		<p>Antagonist RUSH!!!!</p>
 		
 		
 	<script src="lesson1.js"></script>	
