учебник java script 2 глава ---- objects

--- a/lesson1.html
+++ b/lesson1.html
@@ -20,7 +20,8 @@
 		<p>Antagonist RUSH!!!!</p>
 		
 		
-	<script src="lesson1.js"></script>	
+<!--	<script src="lesson1.js"></script>	-->
+	<script src="lesson2.js"></script>
 	</body>
 	
 	
